--- a/Section1/Section1_15.html
+++ b/Section1/Section1_15.html
@@ -11,7 +11,7 @@
                 let mid = Math.floor(str.length/2);
                 let idx = 0;
                 if (str.length%2 === 0){ //짝수일 경우
-                answer = str.substring(mid-1, mid+1);
+                answer = str.substring(mid-1, mid+1); // substring은 첫번째 인덱스부터 두 번째 인덱스 전까지 추출
                 } else{
                     answer = str.substring(mid, mid+1);
                 }
