Inflearn : 올바른 괄호

--- a/Section1/Section1_14.html
+++ b/Section1/Section1_14.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <script>
-            // 가장 긴 문자열
+            // 가장 긴 문자열을 출력하는 프로그램
             function solution(n, arr){
                 let answer="";
                 for (i=0; i<arr.length; i++){
